Fixed static resource path

--- a/src/main/resources/templates/employeeList.html
+++ b/src/main/resources/templates/employeeList.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Employees List</title>
-  <link rel="stylesheet" href="/static/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <h1>Employees List</h1>
