Fixed static resource path
Also update template

--- a/src/main/resources/templates/employeeList.html
+++ b/src/main/resources/templates/employeeList.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Employees List</title>
-  <link rel="stylesheet" href="/static/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <h1>Employees List</h1>
@@ -14,7 +14,7 @@
         <th>Last name</th>
         <th>Gender</th>
         <th>Hire date</th>
-        <th>Age (in years)</th>
+        <th>Birth date</th>
       </tr>
     </thead>
     <tbody>
